[package]
name = "toyotactl"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
flate2 = "1.0"
keyring = "2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.36", features = ["full"] }
url = "2.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
